--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 @import '../styles/utilities.css';
 @import '../styles/blocks.css';
 @import '../styles/glass.css';
+@import '../styles/caret.css';
 
 /* Reset */
 * {
