--- a/components/layout/AppWindow/AppWindow.css
+++ b/components/layout/AppWindow/AppWindow.css
@@ -14,6 +14,18 @@
 
 }
 
+/* on mobile, the app window should be full screen */
+@media (max-width: 768px) {
+  .app-window {
+    min-width: 100dvw;
+    min-height: 100dvh;
+    max-width: none;
+    max-height: none;
+    border-radius: 0;
+    box-shadow: none; 
+  }
+}
+
 .app-window-header {
   height: 40px;
   backdrop-filter: var(--glass-backdrop-filter);
