--- a/components/ui/GlassButton/GlassButton.css
+++ b/components/ui/GlassButton/GlassButton.css
@@ -1,3 +1,11 @@
+.glass-button-icon-text {
+  font-size: 16px;
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .glass-button {
   width: 32px;
   height: 32px;
