--- a/components/views/EditorView/PageContainer.css
+++ b/components/views/EditorView/PageContainer.css
@@ -1,8 +1,9 @@
 .page-container {
   flex: 1;
   overflow-y: auto;
-  padding: var(--spacing-sm);
   background: var(--glass-white);
-  padding-bottom: calc(var(--bottom-bar-height) + var(--spacing-xl));
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
