--- a/components/layout/TopBar/TopBar.css
+++ b/components/layout/TopBar/TopBar.css
@@ -24,18 +24,19 @@
   color: var(--color-text);
   cursor: pointer;
   min-width: 100px;
+  flex: 1;
+  display: flex;
 }
 
 .top-bar-title span {
   display: block;
   padding: var(--spacing-xs) var(--spacing-sm);
-  border-radius: var(--radius-sm);
+  border: 0px;
   transition: background-color 0.2s ease;
+  width: 100%;
+  cursor: text;
 }
 
-.top-bar-title span:hover {
-  background-color: var(--color-hover);
-}
 
 .top-bar-title-input {
   font-size: var(--font-size);
@@ -43,12 +44,12 @@
   font-family: inherit;
   color: var(--color-text);
   background: transparent;
-  border: 1px solid var(--color-border);
-  border-radius: var(--radius-sm);
+  border: 0px;
   padding: var(--spacing-xs) var(--spacing-sm);
   outline: none;
   min-width: 100px;
   width: 100%;
+  cursor: text;
 }
 
 .top-bar-title-input:focus {
